<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_default"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_warning"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enable_gps"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/if_you_dont_enable"
        android:textColor="@color/md_grey_900"
        android:textSize="@dimen/font_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dont_enable_gps"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_enable_gps"
            android:textAlignment="textStart"
            android:textColor="@color/md_grey_700"
            app:cornerRadius="18dp"
            app:strokeColor="@color/md_grey_700"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enable_gps"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/enable_gps"
            android:textAlignment="textEnd"
            app:cornerRadius="18dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>

</LinearLayout>