<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close"
        style="@style/AppTheme.DialogButton"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/iv_desc_close_dialog"
        android:src="@drawable/ic_close" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/iv_arrow_left"
            style="@style/AppTheme.DialogButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/iv_desc_prev_image"
            android:src="@drawable/ic_left_arrow" />

        <ImageView
            android:id="@+id/iv_arrow_right"
            style="@style/AppTheme.DialogButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/iv_desc_next_image"
            android:src="@drawable/ic_right_arrow" />
    </RelativeLayout>

</LinearLayout>