<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_default"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:minWidth="70dp"
            android:minHeight="70dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_bold"
            android:gravity="center"
            android:text="@string/warning"
            android:textSize="@dimen/font_size_large" />

        <TextView
            android:id="@+id/tvPrimaryInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/work_sans"
            android:gravity="center"
            android:text="@string/to_continue_this_action"
            android:textSize="@dimen/font_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/md_grey_700"
                android:textSize="@dimen/font_size_small"
                app:cornerRadius="18dp"
                app:strokeColor="@color/md_grey_700"

                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:text="@string/login_user"
                android:textSize="@dimen/font_size_small"
                app:cornerRadius="18dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>